fix overflow

--- a/style.css
+++ b/style.css
@@ -22,9 +22,20 @@ a:hover {
 	color: #27ae60;
 }
 
+img {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
 .featured {
 	background-color: #f1f1f1;
-	height:400px;
+	height:470px;
+}
+
+.featured img {
+	width: 100%;
+	height: 470px;
 }
 
 #navbar-custom {
